--- a/src/components/friend-item/friend-item.styles.scss
+++ b/src/components/friend-item/friend-item.styles.scss
@@ -40,5 +40,64 @@
       }
     }
   }
+}
 
+@media screen and (max-width: 2560px) { 
+  .friend-item {
+    .friend-item-descr {
+      .friend-item-name-and-email {
+        .name,.email {
+          font-size: 15px;
+        }
+      }
+      .friend-item-address {
+        .city {
+          font-size: 15px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .friend-item {
+    .friend-item-descr {
+      .friend-item-name-and-email {
+        .name,.email {
+          font-size: 15px;
+        }
+      }
+      .friend-item-address {
+        .city {
+          font-size: 15px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .friend-item {
+    .friend-item-image {
+      img {
+        width: 11vw;
+      }
+    }
+    .friend-item-descr {
+      flex-direction: column;
+      align-items: start;
+      .friend-item-name-and-email {
+        .name,.email {
+          margin-top: 0;
+          font-size: 12px;
+        }
+      }
+      .friend-item-address {
+        .city {
+          font-size: 12px;
+          margin-left: 20px;
+        }
+      }
+    }
+  }
 }
